DT-2004-05-02-0: Enhancem.: o Started DRMAA README
                            o Cleaned up DRMAA web page
                            o Checked JGrid into experimental directory
                            o Fixed byte order issues in JGrid skeleton
                 Changed:   DRMAA, JGrid
                 Issue:     952

CR-2004-05-01-0: Bugfix:    o global host list refresh (re-resolving of used 
                              host names) is now done in a separate list copy
                              to be able to unlock the list and let other 
                              threads use the global host list in the meantime
                 Changed:   commlib

AD-2004-04-30-1: Bugfix:    Did fix build.
                 Changed:   qmaster

DT-2004-04-30-0: Bugfix:    o drmaa_control(DRMAA_CONTROL_TERMINATE) now
                              behaves like qmon when deleting
                            o Brought test_drmaa in sync with drmaa.c
                            - test_drmaa still fails the DRMAA_V_ENV test in
                              ST_ATTRIBUTE_CHECK.
                 Changed:   DRMAA
                 Issue:     979

AD-2004-04-30-0: Cleanup:   Did move 'get_local_conf_val()'.
                 Changed:   qmaster

JG-2004-04-30-1: Testsuite: verified test functional/access_lists
                            fixed test system_tests/clients/qmod/auto_reschedule

JG-2004-04-30-0: Bugfix:    qconf -sconf had problems with short vs. long 
                            hostnames and hostname resolution.
                            qmaster did no hostname resolving for cluster config
                            objects.
                            deleting config or host objects that had a long 
                            hostname by specifying the short hostname and vice 
                            versa failed.
                            Fixed a qmaster core dump.
                 Changed:   sge_qmaster, qconf
                 Issue:     1007, 1009