@@ -46,30 +46,31 @@ typedef void (*sge_htable_for_each_proc)(
     htable, const void*, const void**
 );
 
-extern htable sge_htable_create(int size, const void *(*dup_func)(const void *), int (*hash_func)(const void *), int (*compare_func)(const void *, const void *));
-extern void sge_htable_destroy(htable ht);
-extern void sge_htable_store(htable ht, const void* key, const void* data);
-extern int sge_htable_lookup(htable ht, const void* key, const void** data);
-extern void sge_htable_delete(htable ht, const void* key);
-extern void sge_htable_for_each(htable ht, sge_htable_for_each_proc proc);
+htable sge_htable_create(int size, const void *(*dup_func)(const void *), int (*hash_func)(const void *), int (*compare_func)(const void *, const void *));
+void sge_htable_destroy(htable ht);
+void sge_htable_store(htable ht, const void* key, const void* data);
+int sge_htable_lookup(htable ht, const void* key, const void** data);
+void sge_htable_delete(htable ht, const void* key);
+void sge_htable_for_each(htable ht, sge_htable_for_each_proc proc);
 
-extern const char *sge_htable_statistics(htable ht, dstring *buffer);
+const char *sge_htable_statistics(htable ht, dstring *buffer);
 
-extern const void *dup_func_u_long32(const void *key);
-extern const void *dup_func_string(const void *key);
-extern const void *dup_func_long(const void *key);
-extern const void *dup_func_pointer(const void *key);
+const void *dup_func_u_long32(const void *key);
+const void *dup_func_string(const void *key);
+const void *dup_func_long(const void *key);
+const void *dup_func_pointer(const void *key);
 
-extern int hash_func_u_long32(const void *key);
-extern int hash_func_string(const void *key);
-extern int hash_func_long(const void *key);
-extern int hash_func_pointer(const void *key);
+int hash_func_u_long32(const void *key);
+int hash_func_string(const void *key);
+int hash_func_long(const void *key);
+int hash_func_pointer(const void *key);
 
 
-extern int hash_compare_u_long32(const void *a, const void *b);
-extern int hash_compare_string(const void *a, const void *b);
-extern int hash_compare_long(const void *a, const void *b);
-extern int hash_compare_pointer(const void *a, const void *b);
+int hash_compare_u_long32(const void *a, const void *b);
+int hash_compare_string(const void *a, const void *b);
+int hash_compare_long(const void *a, const void *b);
+int hash_compare_pointer(const void *a, const void *b);
 
+int hash_compute_size(int number_of_elem);
 
 #endif /* __SGE_HASH_H */
