@@ -1,3 +1,6 @@
+JG-2004-05-03-0: Enhancem.: Optimization of hashtables.
+                 Review:    SG
+
 DT-2004-05-02-0: Enhancem.: o Started DRMAA README
                             o Cleaned up DRMAA web page
                             o Checked JGrid into experimental directory
